--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,17 @@
-steps:
-  - uses: actions/checkout@v1
-  - name: npm install and build webpack
-    run: |
-      npm install
-      npm run build
+name: "Hello Actions"
+description: "Greet someone"
+author: "octocat@github.com"
+
+inputs:
+    MY_NAME:
+      description: "Who to greet"
+      required: true
+      default: "World"
+
+runs:
+    uses: "docker"
+    image: "Dockerfile"
+
+branding:
+    icon: "mic"
+    color: "purple"
